Index y Adquisición acomodados

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<title>Mockup-Website-SocialMedia</title>
+		<title>Home - Social Media</title>
 		<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
 		<link rel="stylesheet" href="./bootstrap/js/bootstrap.min.js">
 		<link rel="stylesheet" href="./css/style.css">
@@ -41,7 +41,7 @@
 						<figure id="diagramIndex"> <img src="./img/people-talking.png"> </figure>
 					</div>
 					<div class="col-sm-7 text-justify" id="contentText">
-						<p><span id="bigYellow">Prepárate</span> para recibir la audiencia correcta, segmentada y estratificada para hacer de un grupo de consumidores, una comunidad que te permita posicionarte en el mercado para ganar visibilidad, reputación y sobre todo, ganancias económicas en base a un tráfico capaz de interactuar con lo que tu marca, tiene para ofrecer. </p>
+						<p><span class="bigYellow">Prepárate</span> para recibir la audiencia correcta, segmentada y estratificada para hacer de un grupo de consumidores, una comunidad que te permita posicionarte en el mercado para ganar visibilidad, reputación y sobre todo, ganancias económicas en base a un tráfico capaz de interactuar con lo que tu marca, tiene para ofrecer. </p>
 						<p>Tu tranquilo y relajado, porque The Social Audience ha cambiado el paradigma en cuanto a la adquisición de tráfico, porque aunque encuentres este servicio en muchas otras partes, la experiencia en nuestra empresa permite entender que el tener un tráfico que ha sido sensibilizado y guiado a tu marca, es un hecho que te permite tener acciones reales para con tu proyecto.</p>
 						<p>Porque lo necesitas, porque en The Social Audience hemos visto como los planes y estrategias se desgastan de manera rápida al no entender el cómo es la dinámica qué permite segmentar un público y delimitar la calidad de este en cuanto a  los consumidores que tu mar2ca necesita</p>
 					</div>
