Consultoria listo, adquision a mitad

--- a/data.html
+++ b/data.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-		<head>
-			<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-			<title>Mockup-Website-SocialMedia</title>
-			<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
-			<link rel="stylesheet" href="./bootstrap/js/bootstrap.min.js">
-			<link rel="stylesheet" href="./css/style-data.css">
-		</head>
-
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+		<title>Home - Social Media</title>
+		<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" href="./bootstrap/js/bootstrap.min.js">
+		<link rel="stylesheet" href="./css/style.css">
+		<link rel="stylesheet" href="./css/data.css">
+	</head>
 	<body>
 	<div class="containter-fluid">
 	<header>
