Consultoria listo, falta revisar para pantallas pequeñas

--- a/consultoria.html
+++ b/consultoria.html
@@ -39,23 +39,24 @@
 							<img src="./img/h1-consultoria.png">
 						</figure>
 					</div>
-					<div class="col-sm-5 paddingTop100" id="paragraph" >
+					<div class="col-sm-5 paddingTop100 text-justify" id="paragraph" >
 						<p>Muchos hablan de la consultoría, y te afirman que es el primer paso para entender a una audiencia y así generar estrategias para adquirirla. Sí, es cierto y no lo negábamos, pero ¿Te han comentado realmente lo que es una consultoría y la has entendido? El 20% de las empresas con las que hemos trabajado, han entendido la finalidad de la consultaría, y el resto, nada</p>
 					</div>
-					<div class="col-sm-2">
-						<figure class="titleImg">
-							<img src="./img/cable-conect.png">
-						</figure>
-					</div>
 				</div>
+				<figure class="titleImg" id="cableConnect">
+					<img src="./img/cable-conect.png">
+				</figure>
+				<div class="space50px"></div>
 				<div class="row">
-					<div class="col-sm-6">
+					<div class="col-sm-2">
 						<figure>
 							<img src="./img/que-es.png" id="ima4">
 						</figure>
-						<p class="parrafo1" id="sub">Es un plan estratégico en el cual se define el estado actual de una marca o producto para efectuar así la correcta proyección de este en cuanto a cambios y configuraciones que permiten acentuar el éxito de una campaña y proyecto</p>
-						<p class="parrafo1">Lo cierto de lo último que te hemos comentado, es que no lo entiendes, aunque sí que suena bien redactado. Esto ya lo han dicho muchas empresas, pero tú marca o medio de comunicación necesita de una consulta como instrumento de recolección de datos, porque este es el concepto real de una consultoría</p>
-						<p class="parrafo1">Recolectar datos, y desconocemos cuales son porque solo al aplicar un instrumento que nos permite estudiar tu situación actual en el mercado, es que podremos proyectar la consultaría para los ajustes y cambios que estás buscando.</p>
+					</div>
+					<div class="col-sm-4 text-justify" id="marginTop">
+						<p>Es un plan estratégico en el cual se define el estado actual de una marca o producto para efectuar así la correcta proyección de este en cuanto a cambios y configuraciones que permiten acentuar el éxito de una campaña y proyecto</p>
+						<p>Lo cierto de lo último que te hemos comentado, es que no lo entiendes, aunque sí que suena bien redactado. Esto ya lo han dicho muchas empresas, pero tú marca o medio de comunicación necesita de una consulta como instrumento de recolección de datos, porque este es el concepto real de una consultoría</p>
+						<p>Recolectar datos, y desconocemos cuales son porque solo al aplicar un instrumento que nos permite estudiar tu situación actual en el mercado, es que podremos proyectar la consultaría para los ajustes y cambios que estás buscando.</p>
 					</div>
 					<div class="col-sm-6">
 						<figure>
@@ -63,48 +64,53 @@
 						</figure>
 					</div>
 				</div>
-				<div class="row">
+				<div class="row" id="secondSection">
 					<div class="col-sm-12">
-						<figure>
-							<img src="./img/consultoria-innovadora.png" id="ima6">
-						</figure>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-6">
-						<figure>
-							<img src="./img/chat.png" id="ima7">
-						</figure>
+							<figure class="text-center">
+								<img src="./img/consultoria-innovadora.png" id="nuveConsulta">
+							</figure>
 					</div>
 					<div class="col-sm-6">
+						<figure class="text-center">
+							<img src="./img/chat.png">
+						</figure>
+					</div>
+					<div class="col-sm-6 textWhite">
 						<p class="parrafo2">Una consultoría proyecta a futuro, porque si se trata de un proceso moderno, refleja cambios constantes que permiten entonces diseñar una estrategia qué posiciona una marca y por ende esta ganara audiencia, y de esta manera entonces podremos definir en donde estará una empresa ubicada en el mercado en cuestión de un corto, media y largo plazo con The Social Audience.</p>
 						<p class="parrafo2">De esta manera, la consultoría define procesos de cambios contantes que se actualizan en función de las relaciones sociales, porque es el tema de la audiencia social lo que se estudia en un mercado tan dinámico y cambiante a ritmos sorprendentes.</p>
 						<p class="parrafo2">Es por esta razón, que definimos entonces cuales son los puntos que determina una consultaría completa en base al estudio de una audiencia:</p>
 					</div>
 				</div>
 			</section>
-			<section id="sec">
-				<div class="row">
+			<section>
+				<div class="row text-justify">
 					<div class="col-sm-3" id="uno">
-						<p id="peque">Las interacciones e intenciones de las audiencia es cuestión del mercado en el cual se desenvuelve una marca o producto</p>
+						<p id="boxText">Las interacciones e intenciones de las audiencia es cuestión del mercado en el cual se desenvuelve una marca o producto</p>
 					</div>
 					<div class="col-sm-3" id="dos">
-						<p id="peque2">Los intereses, que se definen como las necesidades echas expresión en los distintos canales de tráfico, Gustos y motivaciones se combinan para definir el tipo de target que se busca como audiencia ideal</p>
+						<p id="boxText">Los intereses, que se definen como las necesidades echas expresión en los distintos canales de tráfico, Gustos y motivaciones se combinan para definir el tipo de target que se busca como audiencia ideal</p>
 					</div>
 					<div class="col-sm-3" id="tres" >
-						<p id="peque3">El descubrimiento de marcas, porque reconocer el mercado es no hacerlo bajo un motivo para la competitividad, sino para la comprensión de lo que hacen otros y que cosas no le funcionan</p>
+						<p id="boxText">El descubrimiento de marcas, porque reconocer el mercado es no hacerlo bajo un motivo para la competitividad, sino para la comprensión de lo que hacen otros y que cosas no le funcionan</p>
 					</div>
 					<div class="col-sm-3" id="cuatro">
-						<p id="peque4">Demográficamente, una consultaría permite segmentar y determinar ese público ideal para entender cómo se expresan socialmente, porque este es el punto clave cuando se diseña una estrategia para la adquisición de trágico</p>
+						<p id="boxText">Demográficamente, una consultaría permite segmentar y determinar ese público ideal para entender cómo se expresan socialmente, porque este es el punto clave cuando se diseña una estrategia para la adquisición de trágico</p>
 					</div>
 				</div>
-				<figure>
-					<img src="./img/verdadera-consultoria.png" id="ima8">
-				</figure>
+			</section>
+			<section id="sec">
 				<div class="row">
-					<div class="col-sm-2"></div>
-					<div class="col-sm-8">
-						<p id="parra">En The Social Audience nos hemos dado cuenta entonces que una consultaría bien realizada permite entonces segmentar y 			categorizar a las audiencias en función de interacciones que surgen a partir de intereses sociales con respeto a como las 		marcas se posicionan demográficamente. Estos 4 principios, son la base de una auditoria completa, pero créenos que se puede 	hacer mucho más
+					<div class="col-sm-3"></div>
+					<div class="col-sm-6">
+						<figure class="text-right">
+							<img src="./img/verdadera-consultoria.png" id="verdaderaConsultoria">
+						</figure>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-sm-3"></div>
+					<div class="col-sm-6 text-justify">
+						<p id="backgroundParagraph">En The Social Audience nos hemos dado cuenta entonces que una consultaría bien realizada permite entonces segmentar y categorizar a las audiencias en función de interacciones que surgen a partir de intereses sociales con respeto a como las 		marcas se posicionan demográficamente. Estos 4 principios, son la base de una auditoria completa, pero créenos que se puede 	hacer mucho más
 							Bien segmentamos una audiencia, pero no en las ya conocidas áreas de edades, sexo o los mismos intereses, sino en cómo esta se relaciona con las marcas en los mercados, porque es esta la clave qué le permite entonces a una empresa que busca captar tráfico masivo, hacerlo para conseguir interacciones y conversiones reales
 							Una consultoría completa como la se efectúa en The Social Audience, nos permiten comprender la realidad de una marca, sus rasgos, y por como esta puede llegar a posicionar de manera integra en un mercado, porque de nada sirve tener una gran cantidad de audiencia social, si como empresa no sabemos dirigirla por los canales correctos, o hacerlo, no cumplimos con la satisfacción que espera esta audiencia.
 							Por ello no solo nos conformamos con la entrega de una consultoría, sino el cómo esta puede llegar a conectar de manera significativa con las intenciones, pensamiento y emociones de una comunidad</p>
