Maqueta completa, faltan corregir detalles y perfeccionar responsive

--- a/consultoria.html
+++ b/consultoria.html
@@ -75,7 +75,7 @@
 							<img src="./img/chat.png">
 						</figure>
 					</div>
-					<div class="col-sm-6 textWhite">
+					<div class="col-sm-4 text-justify textWhite">
 						<p class="parrafo2">Una consultoría proyecta a futuro, porque si se trata de un proceso moderno, refleja cambios constantes que permiten entonces diseñar una estrategia qué posiciona una marca y por ende esta ganara audiencia, y de esta manera entonces podremos definir en donde estará una empresa ubicada en el mercado en cuestión de un corto, media y largo plazo con The Social Audience.</p>
 						<p class="parrafo2">De esta manera, la consultoría define procesos de cambios contantes que se actualizan en función de las relaciones sociales, porque es el tema de la audiencia social lo que se estudia en un mercado tan dinámico y cambiante a ritmos sorprendentes.</p>
 						<p class="parrafo2">Es por esta razón, que definimos entonces cuales son los puntos que determina una consultaría completa en base al estudio de una audiencia:</p>
