--- a/data.html
+++ b/data.html
@@ -9,138 +9,142 @@
 		<link rel="stylesheet" href="./css/data.css">
 	</head>
 	<body>
-	<div class="containter-fluid">
-	<header>
-		<div class="row">
-		<div class="col-sm-3">
-			<figure>
-				<img src="./img/LOGO-menu.png" id="ima">
-			</figure>
-		</div>
-		<div class="col-sm-9">
-		<div id="navbar" class="top-navbar">
-			<nav id="menu">
-			<ul class="list-inline">
-			   <li><a title="Opcion 1" href="index.html">Home</a></li>
-			    <li><a title="Opcion 2" href="adquisicion.html">Adquisición de Tráfico</a></li>
-			    <li><a title="Opcion 3" href="consultoria.html">Consultoria</a></li>
-			    <li><a title="Opcion 4" href="data.html">Enriquecimiento de data </a></li>
-			    <li><a title="Opcion 5" href="#">Contacto</a></li>
-			</ul>
-			</nav>
-		</div>
-		</div>
-		</div>
-		</header>
-		<section id="prin">
+		<div class="containter-fluid">
+			<header>
+				<div class="row">
+					<div class="col-sm-3">
+						<figure id="logo-menu">
+							<img src="./img/LOGO-menu.png">
+						</figure>
+					</div>
+					<div class="col-sm-9">
+						<div id="navbar" class="top-navbar">
+							<nav id="menu">
+								<ul class="list-inline">
+							    <li class="active"><a title="Opcion 1" href="index.html">Home</a></li>
+							    <li><a title="Opcion 2" href="adquisicion.html">Adquisición de Tráfico</a></li>
+							    <li><a title="Opcion 3" href="consultoria.html">Consultoria</a></li>
+							    <li><a title="Opcion 4" href="data.html">Enriquecimiento de data </a></li>
+							    <li><a title="Opcion 5" href="#">Contacto</a></li>
+								</ul>
+							</nav>
+						</div>
+					</div>
+				</div>
+			</header>
+		<section id="content">
 			<div class="row">
-				<div class="col-sm-6">
-					<figure>
+				<div class="col-sm-6 padding0">
+					<figure class="text-left">
 						<img src="./img/burbuja-data.png" id="ima1">
 					</figure>
 				</div>
-				<div class="col-sm-6">
-					<figure>
+				<div class="col-sm-6 padding0">
+					<figure class="text-right">
 						<img src="./img/h1-data.png" id="ima2">
 					</figure>
 				</div>
 			</div>
-			<div class="row">
-				<div class="col-sm-1"></div>
-				<div class="col-sm-10" id="arre">
-					<p>Es en esta parte del estudio de mercado del tráfico dónde la estrategia se define en su totalidad, porque al tener una data completa sobre las características y competencias de nuestros usuarios, es que realmente llegamos a definir el plan de acción de manera categórica al enriquecer una data que se convierte de típica, a atípica por su calidad
-					</p>
-					<p>Te ha pasado, y de distintas formas, pero ha ocurrido; que al tener toda una cantidad de data, no sabes qué hacer con ella porque no cuentas con un plan de acción que comprende a la data, porque tu data no te permite desenvolverte en tu mercado de manera integral, ya que esta carece de una definición simple.
-					</p>
+			<div class="row paddingTop100">
+				<div class="col-sm-3"></div>
+				<div class="col-sm-6 text-justify" >
+					<p>Es en esta parte del estudio de mercado del tráfico dónde la estrategia se define en su totalidad, porque al tener una data completa sobre las características y competencias de nuestros usuarios, es que realmente llegamos a definir el plan de acción de manera categórica al enriquecer una data que se convierte de típica, a atípica por su calidad</p>
+					<p>Te ha pasado, y de distintas formas, pero ha ocurrido; que al tener toda una cantidad de data, no sabes qué hacer con ella porque no cuentas con un plan de acción que comprende a la data, porque tu data no te permite desenvolverte en tu mercado de manera integral, ya que esta carece de una definición simple.</p>
 					<p>En conclusión, tienes data y tráfico, pero no es de calidad, lo que no sirve de nada sino no son capaces de generas conversiones y acciones en tu web </p>
 				</div>
-				<div class="col-sm-1"></div>
 			</div>
 			<div class="row">
-				<div class="col-sm-6">
+				<div class="col-sm-2">
 					<figure>
 						<img src="./img/como-enriquecer.png" id="ima3">
 					</figure>
-					<p class="parrafo1">Lo cierto es que en The Social Audience sí que sabemos qué hacer con toda esta acumulación de data, porque muchos piensan en técnicas para modelar estos datos con  tus cualidades como marca, lo que termina realmente por enriquecer esta base de datos
+				</div>
+				<div class="col-sm-4 text-justify" id="marginTop">
+					<p class="">Lo cierto es que en The Social Audience sí que sabemos qué hacer con toda esta acumulación de data, porque muchos piensan en técnicas para modelar estos datos con  tus cualidades como marca, lo que termina realmente por enriquecer esta base de datos
 						El marketing hoy día es una innovación en las acciones basadas en procesos, porque se busca comprender a una audiencia, y es desde esta perspectiva que realmente se puede obtener una data enriquecida.
 						Poder medir el tipo de pensamiento de una audiencia desde los puntos de vistas sociales es un reto que representamos mediante instrumentos cualitativos, que miden experiencias e interpretan acciones de las audiencias para entonces saber que darles, y sobre todo, como hacerlo de manera satisfactoria</p>
-
 				</div>
 				<div class="col-sm-6">
 					<figure>
-						<img src="./img/nube.png" id="ima4">
+						<img src="./img/nube.png" id="cloud">
 					</figure>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-sm-12">
-					<figure>
+					<figure class="text-center">
 						<img src="./img/pendrive.png" id="ima5">
 					</figure>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-sm-12">
-					<figure>
-						<img src="./img/la-data-lo-es-todo.png" id="ima6">
+					<figure class="text-center">
+						<img src="./img/la-data-lo-es-todo.png" id="nuveConsulta">
 					</figure>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-sm-6">
-					<figure>
+					<figure class="text-center">
 						<img src="./img/data-grafico.png" id="ima7">
 					</figure>
 				</div>
-				<div class="col-sm-6">
-					<p class="parrafo2">Para un sociólogo en el campo, si lo es ¿Y porque para nosotros también? No es que seamos sociólogos, y tampoco queremos serlo. Somos íntegros, capacitados para entender una base de datos desde distintos puntos de vista, estos que nos permiten entender como una data realmente revela lo que quiere la audiencia, y por ende esta data será de calidad.
-						Porque si una audiencia se ha vuelto compleja en los últimos años, son los jóvenes que pertenecen a la comunidad hispana en los Estados Unidos. Estos representan el 60% de los 55 millones de hispanos en dicho país, por lo tanto es el target objetivo ya que son una mayoría que se encuentra en un proceso de definición con respecto a lo que son como sociedad
-						Configurar este pensamiento es la clave para diseñar una estrategia de marketing capaz de fomentar la adquisición de data, sí. Pero de nada ha servido esta data sino es categorizada y segmentada en el valor natural que le define, porque es de esta forma que comprendemos las características y patrones de una data que termina por generar altas ingresos para un producto o una marca</p>
+				<div class="col-sm-4 text-justify">
+					<p>Para un sociólogo en el campo, si lo es ¿Y porque para nosotros también? No es que seamos sociólogos, y tampoco queremos serlo. Somos íntegros, capacitados para entender una base de datos desde distintos puntos de vista, estos que nos permiten entender como una data realmente revela lo que quiere la audiencia, y por ende esta data será de calidad.</p>
+					<p>Porque si una audiencia se ha vuelto compleja en los últimos años, son los jóvenes que pertenecen a la comunidad hispana en los Estados Unidos. Estos representan el 60% de los 55 millones de hispanos en dicho país, por lo tanto es el target objetivo ya que son una mayoría que se encuentra en un proceso de definición con respecto a lo que son como sociedad</p>
+					<p>Configurar este pensamiento es la clave para diseñar una estrategia de marketing capaz de fomentar la adquisición de data, sí. Pero de nada ha servido esta data sino es categorizada y segmentada en el valor natural que le define, porque es de esta forma que comprendemos las características y patrones de una data que termina por generar altas ingresos para un producto o una marca</p>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-12">
-					<figure>
-						<img src="./img/hispanos-en-transicion.png" id="ima8">
+				<div class="space50px"></div>
+				<div class="space50px"></div>
+				<div class="col-sm-7">
+					<figure class="text-right">
+						<img src="./img/hispanos-en-transicion.png" id="nuveConsulta">
 					</figure>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-7">
+				<div class="col-sm-6 text-justify">
 					<p id="parra">El ritmo cambiante de la comunidad hispana en Estados Unidos avanza a ritmos amplios, porque se encuentran estos entre un modelo social anglosajones, y un pensamiento latino. Una buena data, enriquecida hasta la totalidad de sus partes y funciones, no entiende esta premisa como una separación o cambio.
 					La entiende como lo hacemos nosotros, en una combinación asombrosa en la cual la audiencia social se redefine así misma de manera constante. Comprender estos datos, es la manera correcta de obtener una base de datos enriquecida que tendrá en esta oportunidad una mayor aproximación hacías descripciones y hechos que estarán por encima de los números</p>
 				</div>
-				<div class="col-sm-5"></div>
 			</div>
 			<div class="row">
-				<div class="col-sm-10">
+				<div class="space50px"></div>
+				<div class="col-sm-7"></div>
+				<div class="col-sm-5">
 					<figure>
-						<img src="./img/ver-numeros.png">
+						<img src="./img/ver-numeros.png" id="nuveConsulta">
 					</figure>
-					<p><span>¡Claro que sí!</span> Y The Social Audience toma ese rumbo contigo, porque esta finalidad, por más analítica que parezca, es la nueva forma de concebir el marketing moderno, porque es en esta premisa donde se desarrollan los proyectos con los cuales llevamos tráfico a tu empresa, pero un tráfico de calidad porque hemos estudiado y entendido cada variable de esta sin dejar nada fuera de lugar
-Si tu tráfico es rebelde, lo entenderemos y te guiaremos a cómo sacarle el máximo provecho. Si es una audiencia conservadora en sus ideas, entonces haremos de transición para que tu marca tenga éxito a la medida de tu audiencia, sin forzar nada
-Si tu audiencia social es hispana residenciada en Estados Unidos, entonces permítenos decirte que solo al escucharles y entenderles, podrás generar no la cantidad de dinero que buscas con vender una marca, sino mucho más allá, porque si esta audiencia parece infinita en su desenvolvimiento, entonces también tus ganancias, porque si no se conecta esta audiencia contigo, entonces el fracaso lo habremos garantizado
-Nosotros no construimos base de datos enriquecidos, porque ellas nos hacen a ti y harán de tu marca la mayor inversión, porque cuentas con audiencia social de calidad</p>
 				</div>
-				<div class="col-sm-2">
+			</div>
+			<div class="row">
+				<div class="col-sm-8 text-justify">
+					<p id="parrafo"><span class="enfasis">¡Claro que sí!</span> Y The Social Audience toma ese rumbo contigo, porque esta finalidad, por más analítica que parezca, es la nueva forma de concebir el marketing moderno, porque es en esta premisa donde se desarrollan los proyectos con los cuales llevamos tráfico a tu empresa, pero un tráfico de calidad porque hemos estudiado y entendido cada variable de esta sin dejar nada fuera de lugar
+					Si tu tráfico es rebelde, lo entenderemos y te guiaremos a cómo sacarle el máximo provecho. Si es una audiencia conservadora en sus ideas, entonces haremos de transición para que tu marca tenga éxito a la medida de tu audiencia, sin forzar nada
+					Si tu audiencia social es hispana residenciada en Estados Unidos, entonces permítenos decirte que solo al escucharles y entenderles, podrás generar no la cantidad de dinero que buscas con vender una marca, sino mucho más allá, porque si esta audiencia parece infinita en su desenvolvimiento, entonces también tus ganancias, porque si no se conecta esta audiencia contigo, entonces el fracaso lo habremos garantizado
+					Nosotros no construimos base de datos enriquecidos, porque ellas nos hacen a ti y harán de tu marca la mayor inversión, porque cuentas con audiencia social de calidad</p>
+				</div>
+				<div class="col-sm-4">
 					<figure>
 						<img src="./img/icono-ver-numeros.png">
 					</figure>
 				</div>
-
 			</div>
 			<div class="row">
-				<div class="col-sm-10">
-					<figure>
+				<div class="col-sm-8">
+					<figure class="text-center">
 						<img src="./img/dinero.png">
 					</figure>
 				</div>
 			</div>
 		</section>
 		<footer class="page-footer blue center-on-small-only">
-			<div class="row" id="pie">
+			<div class="row">
 				<div class="col-sm-6"></div>
-				<div class="col-sm-6 " id="final" >
+				<div class="col-sm-6 textWhite" id="column2Footer">
 					<h3>Oficina Principal</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -148,18 +152,16 @@ Nosotros no construimos base de datos enriquecidos, porque ellas nos hacen a ti 
 					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					<p>Telefono <span id="enfasis">+567894561</span></p>
-					<p id="enfasis" class="ali" >EMAIL: lorem@ipsum.com</p>
+					<p>Teléfono <span class="enfasis">+567894561</span></p>
+					<p class="text-right enfasis" >Email: lorem@ipsum.com</p>
 				</div>
 			</div>
-	    	<div class="footer-copyright">
-        		<div class="container-fluid" id="piee">
-           		 The Social Audience 2017 | Todos los derechos reservados
-       		 	</div>
-    		</div>
+			<div class="footer-copyright">
+				<div class="text-center" id="footerStyle">
+					 <p>The Social Audience 2017 | Todos los derechos reservados</p>
+				</div>
+			</div>
 		</footer>
-
 	</div>
-	</body>
-
+</body>
 </html>
