--- a/consultoria.html
+++ b/consultoria.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 		<title>Home - Social Media</title>
-		<link rel="stylesheet" href="./bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" href="./bootstrap/js/bootstrap.min.js">
+		<link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
+		<link rel="stylesheet" href="./bootstrap/js/bootstrap.js">
 		<link rel="stylesheet" href="./css/style.css">
 		<link rel="stylesheet" href="./css/consultoria.css">
 	</head>
