--- a/adquisicion.html
+++ b/adquisicion.html
@@ -14,7 +14,7 @@
 				<div class="row">
 					<div class="col-sm-3">
 						<figure id="logo-menu">
-							<img src="./img/LOGO-menu.png">
+							<img src="./img/logo-menu.png">
 						</figure>
 					</div>
 					<div class="col-sm-9">
