Correciones de estilos para max-width 1366px

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			<div class="degraded"></div>
 			<section id="preparate">
 				<div class="row" >
-					<div class="col-sm-5 text-center">
+					<div class="col-sm-5 text-center padding0">
 						<figure id="title"> <img src="./img/h1.png"> </figure>
 						<figure id="diagramIndex"> <img src="./img/people-talking.png"> </figure>
 					</div>
@@ -115,13 +115,23 @@
 				<figure id="comprenderleImg">
 					<img src="./img/valor-trafico.png" >
 				</figure>
+				<figure id="bombilla">
+					<img src="./img/recurso_11.png" alt="">
+				</figure>
 				<div class="row">
-					<div class="col-sm-6 text-justify" id="paragraph-3">
+					<div class="col-sm-2">
+						<figure>
+							<img src="./img/recurso_10.png" id="ele">
+						</figure>
+					</div>
+					<div class="col-sm-4 text-justify" id="paragraph-3">
 						<p>Necesidades tenemos todos como agentes sociales, pero cuando esas son orientadas y segmentadas en los principios que determinan una marca como respuesta ante una problemática social, es que entonces surge The Social Audience como proyecto de un marketing social enfocado a las conversiones y captación de tráfico con valor
 						Porque el valor no lo defines hoy tú, y tampoco nosotros. El valor solo surge cuando comprendemos que el tráfico, deja de ser un objeto y se convierte en una comunidad de emociones que se representaran contigo. De ello, nos encargamos nosotros. Conectamos voces en un espacio que no tiene fin para tus ganancias comerciales.</p>
 					</div>
 					<div class="col-sm-6">
-
+						<figure>
+							<img src="./img/recurso_9.png" id="people">
+						</figure>
 					</div>
 				</div>
 			</section>
