--- a/data.html
+++ b/data.html
@@ -136,7 +136,7 @@
 			<div class="row">
 				<div class="col-sm-8">
 					<figure class="text-center">
-						<img src="./img/dinero.png">
+						<img src="./img/dinero.png" id="dineroImg">
 					</figure>
 				</div>
 			</div>
