--- a/data.html
+++ b/data.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<title>Home - Social Media</title>
+		<title>Enriquecimiento de data de usuarios - Social Media</title>
 		<link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
 		<link rel="stylesheet" href="./bootstrap/js/bootstrap.js">
 		<link rel="stylesheet" href="./css/style.css">
