Adaptación para móviles standar completo, falta correcion de bugs

--- a/adquisicion.html
+++ b/adquisicion.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-		<title>Adquisición de tráfico - Social Media</title>
-		<link rel="stylesheet" href="./bootstrap/css/bootstrap.css">
-		<link rel="stylesheet" href="./bootstrap/js/bootstrap.js">
+		<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Home - Social Media</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<link rel="stylesheet" href="./css/style.css">
 		<link rel="stylesheet" href="./css/adquisicion.css">
 	</head>
 	<body>
 		<div class="containter-fluid">
-			<header>
-				<div class="row">
-					<div class="col-sm-3">
-						<figure id="logo-menu">
-							<img src="./img/logo-menu.png">
-						</figure>
-					</div>
-					<div class="col-sm-9">
-						<div id="navbar" class="top-navbar">
-							<nav id="menu">
-								<ul class="list-inline">
-							    <li class="active"><a title="Opcion 1" href="index.html">Home</a></li>
-							    <li><a title="Opcion 2" href="adquisicion.html">Adquisición de Tráfico</a></li>
-							    <li><a title="Opcion 3" href="consultoria.html">Consultoria</a></li>
-							    <li><a title="Opcion 4" href="data.html">Enriquecimiento de data </a></li>
-							    <li><a title="Opcion 5" href="#">Contacto</a></li>
-								</ul>
-							</nav>
-						</div>
-					</div>
+
+			<nav id="menu" class="navbar navbar-default" role="navigation">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+						<span class="sr-only">Desplegar navegación</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button><!-- Logo Image -->
+					<figure id="logo-menu">
+						<img src="./img/logo-menu.png">
+					</figure>
 				</div>
-			</header>
+				<div id="menuElements" class="collapse navbar-collapse navbar-ex1-collapse">
+					<ul class="nav navbar-nav">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="adquisicion.html">Adquisición de Tráfico</a></li>
+						<li><a href="consultoria.html">Consultoria</a></li>
+						<li><a href="data.html">Enriquecimiento de data </a></li>
+						<!-- <li><a title="Opcion 5" href="#">Contacto</a></li> -->
+					</ul>
+				</div>
+			</nav>
+
 			<section id="trafico">
 				<figure id="titleTrafico" class="text-right">
 					<img src="./img/h1-trafico.png" >
@@ -49,7 +52,7 @@
 							<img src="./img/problema-adquisición.png">
 						</figure>
 					</div>
-					<div class="col-sm-4 paddingTop100">
+					<div class="col-sm-4 paddingTop100 text-justify">
 						<p>El paradigma que nos expresa “mucho tráfico y poca interacción” es una novela para muchos, menos para nosotros, porque antes de iniciar una campaña de reelección de data para ubicar a nuestro tráfico, le estudiamos y comprendemos en sus necesidades</p>
 					</div>
 					<div class="col-sm-4 text-center">
@@ -131,11 +134,7 @@
 					<div class="col-sm-6 textWhite" id="column2Footer">
 						<h3>Oficina Principal</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-						quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-						consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-						cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-						proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						tempor incididunt ut labore et dolore magna aliqua.</p>
 						<p>Teléfono <span class="enfasis">+567894561</span></p>
 						<p class="text-right enfasis" >Email: lorem@ipsum.com</p>
 					</div>
@@ -147,5 +146,9 @@
 				</div>
 			</footer>
 		</div>
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+		<!-- Include all compiled plugins (below), or include individual files as needed -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	</body>
 </html>
