Eliminacion de pisos en los nombres de las imagenes

--- a/index.html
+++ b/index.html
@@ -119,12 +119,12 @@
 					<img src="./img/valor-trafico.png" >
 				</figure>
 				<figure id="bombilla">
-					<img src="./img/recurso_11.png" alt="">
+					<img src="./img/recurso11.png" alt="">
 				</figure>
 				<div class="row">
 					<div class="col-sm-2">
 						<figure>
-							<img src="./img/recurso_10.png" id="ele">
+							<img src="./img/recurso10.png" id="ele">
 						</figure>
 					</div>
 					<div class="col-sm-4 text-justify" id="paragraph-3">
@@ -133,7 +133,7 @@
 					</div>
 					<div class="col-sm-6">
 						<figure>
-							<img src="./img/recurso_9.png" id="people">
+							<img src="./img/recurso9.png" id="people">
 						</figure>
 					</div>
 				</div>
