Nuevos ajustes en el footer y en el container

--- a/consultoria.html
+++ b/consultoria.html
@@ -134,6 +134,9 @@
 						<p>Teléfono <span class="enfasis">+567894561</span></p>
 						<p class="text-right enfasis" >Email: lorem@ipsum.com</p>
 					</div>
+					<div id="logoPie" class="text-center">
+						<img src="./img/logo-menu.png" alt="Logo Menu">
+					</div>
 				</div>
 		  	<div class="footer-copyright">
 	    		<div class="text-center" id="footerStyle">
