--- a/data.html
+++ b/data.html
@@ -154,11 +154,14 @@
 						<p>Teléfono <span class="enfasis">+567894561</span></p>
 						<p class="text-right enfasis" >Email: lorem@ipsum.com</p>
 					</div>
-				</div>
-				<div class="footer-copyright">
-					<div class="text-center" id="footerStyle">
-						 <p>The Social Audience 2017 | Todos los derechos reservados</p>
+					<div id="logoPie" class="text-center">
+						<img src="./img/logo-menu.png" alt="Logo Menu">
 					</div>
+				</div>
+		  	<div class="footer-copyright">
+	    		<div class="text-center" id="footerStyle">
+	       		 <p>The Social Audience 2017 | Todos los derechos reservados</p>
+	   		 	</div>
 				</div>
 			</footer>
 		</div>
